--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Page Title</title>
+	<title>JobJumbler</title>
 	<link rel='stylesheet' type='text/css' href='mystyle.css'>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script>
@@ -29,6 +29,7 @@
 <body>
 
 	<div id='nav_wrapper'>
+		<img src='images/logo.png' height='50px' id='logo'>
 	</div>
 
 	<div id='arrow_left_container'>
