--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
 	</div>
 
 	<div id='content_wrapper'>
+
+
+		<div id="welcome">JobJumbler is a new way to find your dream job.</div>
+
+		<div id="intro">Tell us what you want to do. We'll do the rest.</div>
+
+		<form role="form" method="get" id="form" action="{{docroot}}/search.html">
+			<input type="search" id="searchbar" placeholder="Search here...">
+
+			<input type="submit" style="display:none" value="Submit">
+		</form>
+
 	</div>
 
 </body>
