made fonts consistent

--- a/search.html
+++ b/search.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>JobJumbler</title>
-	<link rel='stylesheet' type='text/css' href='mystyle.css'>
+	<link rel='stylesheet' type='text/css' href='searchstyle.css'>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script>
 		$(document).ready(function(){			
@@ -29,7 +29,9 @@
 <body>
 
 	<div id='nav_wrapper'>
-		<img src='images/logo.png' height='50px' id='logo'>
+		<img src='images/logo.png' id='logo'>
+		<div id='apply'>Apply!</div>
+		<div id='start_over'>Start Over</div>
 	</div>
 
 	<div id='arrow_left_container'>
