--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 <head>
 	<title>JobJumbler</title>
@@ -6,9 +5,6 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
 </head>
-
-
-
 
 <body>
 
@@ -18,13 +14,12 @@
 
 	<div id='content_wrapper'>
 
-
 		<div id="welcome">JobJumbler is a new way to find your dream job.</div>
 
 		<div id="intro">Tell us what you want to do. We'll do the rest.</div>
 
-		<form role="form" method="get" id="form" action="{{docroot}}/search.html">
-			<input type="search" id="searchbar" placeholder="Search here...">
+		<form role="form" method="get" id="form" action="/search.php">
+			<input type="search" id="searchbar" placeholder="Enter your keywords here..." name="job_query">
 
 			<input type="submit" style="display:none" value="Submit">
 		</form>
