--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
 		<div id="intro">Tell us what you want to do. We'll do the rest.</div>
 
 		<form role="form" method="get" id="form" action="/search.php">
-			<input type="search" id="searchbar" placeholder="Enter your keywords here..." name="job_query">
+			<input type="search" id="searchbar" placeholder=" What do you want to do?" name="job_query">
 
-			<input type="submit" style="display:none" value="Submit">
+			<input type="search" id="citybar" placeholder=" Where?" name="city_query"> 
+
+			<input type="submit" id="submitbtn" value="Start Exploring">
 		</form>
 
 	</div>
